# cpp-project-template

./: .gitignore  CMakeLists.txt  README.md
include/: math_utils.h
src/: main.cpp  math_utils.cpp
